[package]
name = "cascades"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3" }
bevy_panorbit_camera = "0.25.0"
# , default-features = false, features = [
#     "bevy_winit",
#     "bevy_render",
#     "bevy_sprite",
#     "tonemapping_luts",
#     "png",
# ] }
# bevy_egui = { version = "0.33.0", default-features = false, features = [] }
hexx = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15.3", features = ["webgpu"] }
